# turkey_workshop

./: .gitignore  README.md  README_CTF.md
avail_ctf_countryman/: README.md  program.json
avail_ctf_countryman/inputs/: avail_ctf_countryman.in
avail_ctf_countryman/src/: main.leo
avail_ctf_countryman_12345/: README.md
avail_ctf_countryman_12345/inputs/: avail_ctf_countryman_12345.in
avail_ctf_countryman_12345/src/: main.leo
avail_ctf_goose/: README.md  program.json
avail_ctf_goose/inputs/: avail_ctf_goose.in
avail_ctf_goose/src/: main.leo
ctf_deploy/: Cargo.toml  Makefile  checkcredits.sh  checkgoose.sh  clean.sh  credits.sh
ctf_deploy/src/: aleo_code.rs  deployment.rs  files.rs  main.rs  prog_args.rs
tauri-app/: package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/.cargo/: config.toml
tauri-app/src-tauri/src/: execute.rs  lib.rs
web-helper/: docker-compose.yml  package-lock.json
web-helper/backend/: Cargo.toml  Dockerfile  Makefile  pks.txt  upload.py
web-helper/backend/src/: controller.rs  goose.rs  main.rs  models.rs
web-helper/frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
web-helper/frontend/src/app/: layout.tsx  page.tsx
web-helper/frontend/src/utils/: contract.ts
