[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.11", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.17", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = { version = "0.10", features = ["bindgen", "vendored"] }
aleo-tools = { path = "../../../aleo-tools" }
snarkvm = { version = "0.16.8", features = ["full", "wasm", "default"] }
rand = "0.8.5"
openssl-sys = "0.9.95"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
